<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tasker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world1!</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_discard">Delete</string>
    <string name="action_help">Help</string>
    <string name="action_share">Help</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="text_new_item">Add task</string>

    <!--
    Task detail key values
    private String title;
    private String content;
    private String category;
    private String imageUrl;
    private String location;
    private Date repeatDate;
    private int repeatDay;
    private int dueDay;
    private int dueMonth;
    private int dueYear;
    private int priority;
    private boolean done;
    private List<Comment> comments
    -->
    <string name="task_title">Title:</string>
    <string name="task_content">Content:</string>
    <string name="task_category">Cat:</string>
    <string name="task_location">Location:</string>
    <string name="task_image">Images:</string>
    <string name="task_repeat">Repeat:</string>
    <string name="task_due_date">Due Date:</string>
    <string name="task_priority">Prio:</string>
    <string name="task_comments">Comments:</string>
    <string name="task_sub_tasks">Sub tasks:</string>

    <!-- Main categories -->
    <string-array name="tabs_items">
        <item>Tasks</item>
        <item>Lists</item>
        <item>Projects</item>
    </string-array>

    <!-- Task categories by date -->
    <string-array name="tasksByDate">
        <item>Older</item>
        <item>This week</item>
        <item>Yesterday</item>
        <item>Today</item>
        <item>Tommorow</item>
        <item>Someday</item>
    </string-array>

    <!-- Task categories by type -->
    <string-array name="tasksByType">
        <item>Personal</item>
        <item>Work</item>
        <item>Shared</item>
    </string-array>

    <!-- Create the main SQL Strings. -->
    <string name="title_activity_task_details">TaskDetailsActivity</string>
    <string name="title_activity_task_detailed">TaskDetailedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
