<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tasker="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new"
        tasker:showAsAction="always"
        tasker:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        tasker:showAsAction="never"
        tasker:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        />
    <item android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_discard"
        tasker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        tasker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        tasker:showAsAction="never"/>
</menu>